<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="my_mail">Nicoanik@gmail.com</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_refresh">Обновить</string>
    <string name="clear_button_search_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_activity">Медиатека</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_create_playlist">Завершить создание плейлиста?</string>
    <string name="data_will_be_to_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
    <string name="delete_playlist_dialog">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="to_share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="nothing_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков...</string>
    <string name="no_internet">Отсутствует подключение к интернету</string>
    <string name="no_permission">Невозможно запустить музыкальный сервис без Вашего разрешения!</string>

    <plurals name="playlist_size" translatable="false">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="tracks_duration" translatable="false">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>
</resources>