<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_14"
    style="@style/ModeFragmentMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_22sp"
        style="@style/TextStyleMedium500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_40"
        android:paddingBottom="@dimen/dp_28">

        <Button
            android:id="@+id/search_button"
            style="@style/button_activity_main"
            android:text="@string/search"
            app:icon="@drawable/ic_search_24" />

        <Button
            style="@style/button_activity_main"
            android:layout_marginVertical="@dimen/dp_16"
            android:id="@+id/media_button"
            android:text="@string/media"
            app:icon="@drawable/ic_media_24" />

        <Button
            style="@style/button_activity_main"
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings_24" />

    </LinearLayout>


</LinearLayout>