<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button_settings"
            android:layout_width="@dimen/back_button"
            android:layout_height="@dimen/back_button"
            android:scaleType="center"
            android:background="@color/white"
            android:src="@drawable/vector_back"
            tools:ignore="ContentDescription"
            android:layout_marginEnd="@dimen/padding_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/padding_main"
        android:paddingEnd="@dimen/padding_settings">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height"
            android:theme="@style/SwitchTheme"
            android:text="@string/night_theme"
            android:textSize="@dimen/small_text"
            android:textColor="@color/settings_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_the_app"
                android:textSize="@dimen/small_text"
                android:textColor="@color/settings_text"
                app:drawableEndCompat="@drawable/vector_share" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/write_to_support"
                android:textSize="@dimen/small_text"
                android:textColor="@color/settings_text"
                app:drawableEndCompat="@drawable/vector_support" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_agreement"
                android:textSize="@dimen/small_text"
                android:textColor="@color/settings_text"
                app:drawableEndCompat="@drawable/vector_agreement" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>