<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingHorizontal="@dimen/between_main"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/between_main"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            app:icon="@drawable/vector_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/between_main"
            app:cornerRadius="@dimen/between_main"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            app:icon="@drawable/vector_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/between_main"
            app:cornerRadius="@dimen/between_main"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            app:icon="@drawable/vector_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon"
            app:iconTint="@color/black"/>

    </LinearLayout>


</LinearLayout>